--- a/gnomeman.html
+++ b/gnomeman.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<link rel="style sheet" type="text/css" href="css/test.css">
-	<title class="big"> GnomeMan Left Behind </title>
+	<title> GnomeMan Left Behind </title>
+	<h1 class="big"> GnomeMan Left Behind</h1>
 </head>
 <body></body>
 </html>
