i cant seem to figure out my CSS sheet

--- a/gnomeman.html
+++ b/gnomeman.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
+
 <head>
-	<link rel="style sheet" type="text/css" href="css/test.css">
 	<title> GnomeMan Left Behind </title>
-	<h1 class="big"> GnomeMan Left Behind</h1>
+	<link rel="style sheet" type="text/css" href="css/test.css">
+	<h1 class="small"> GnomeMan Left Behind</h1>
 </head>
-<body></body>
+<body>
+		<p class="about_me"> gnomes, guardians of gardens and forest once protected these wide lands untill man bared the earth. now we must fight to survive. </p>
+</body>
 </html>
