idiot put a space in "stylesheet"

--- a/gnomeman.html
+++ b/gnomeman.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
-
+<link rel="stylesheet" type="text/css" href="test.css">
 <head>
 	<title> GnomeMan Left Behind </title>
-	<link rel="style sheet" type="text/css" href="css/test.css">
-	<h1 class="small"> GnomeMan Left Behind</h1>
 </head>
-<body>
-		<p class="about_me"> gnomes, guardians of gardens and forest once protected these wide lands untill man bared the earth. now we must fight to survive. </p>
+<body style="background-color: maroon;">
+	<h1 class="header"> GnomeMan Left Behind!</h1>
+	<div class="about_me">
+		<h2>About Us</h2>
+		<p> gnomes, guardians of gardens and forest once protected these wide lands untill man bared the earth. now we must fight to survive. </p>
+	</div>
 </body>
 </html>
