--- a/gnomeman.html
+++ b/gnomeman.html
@@ -5,10 +5,32 @@
 	<title> GnomeMan Left Behind </title>
 </head>
 <body style="background-color: maroon;">
-	<h1 class="header"> GnomeMan Left Behind!</h1>
+	 <img src="IMG/fldr/TITLE.Unfinished.jpg" alt="gnomeman left behind" class=header>
+<div class="grid-container">
+	<div class="projects">
+		<h2>projects</h2>
+		<img src=""> 
+	</div>
+
+	<div class="blog">
+		<h2>Blog</h2>
+		<b href="blog"> title of latest blog post </b>
+	</div>
+
+	<div class="social">
+		<h2>social media</h2>
+		<a href="youtube"> youtube</a>
+		<a href="linked in"> linked-in</a>
+	</div>
+
 	<div class="about_me">
 		<h2>About Us</h2>
 		<p> gnomes, guardians of gardens and forest once protected these wide lands untill man bared the earth. now we must fight to survive. </p>
 	</div>
+</div>
 </body>
+
+<footer class="footer">
+	<p> created by Christopher Partlow <br> cpartlow0495@gmail.com </p>
+</footer>
 </html>
